# dpf-simple-lfo-filter

./: CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-06-07-dpf-simple-lfo-filter.md
docs/superpowers/specs/: 2026-06-07-dpf-simple-lfo-filter-design.md
plugins/SimpleLFOFilter/: Biquad.hpp  DistrhoPluginInfo.h  Lfo.hpp  ParamInfo.h  SimpleLFOFilterPlugin.cpp  SimpleLFOFilterUI.cpp  VSlider.cpp  VSlider.hpp
tests/: test_dsp.cpp
